--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,5 +16,85 @@
 
 body {
   font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
   font-style: normal;
+  font-weight: 400;
+  background-color: #ffffff;
+}
+
+.page-header {
+  color: #000;
+}
+
+.navigation-link {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+}
+
+.nav-button {
+  color: #fff;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  background: #756157;
+}
+
+.hero {
+  text-align: center;
+  background-image: url("../images/hero-img.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+}
+
+.advantages {
+  text-align: center;
+}
+
+.advantages-lead {
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.advantages-description {
+  color: #333;
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.advantages-subtitle {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+}
+
+.advantages-item-text {
+  color: #333;
+}
+
+.advantages-item:nth-child(1),
+.advantages-item:nth-child(7) {
+  color: #ffffff;
+  background-color: #82b3d3;
+}
+
+.advantages-item:nth-child(1) p,
+.advantages-item:nth-child(7) p {
+  color: #ffffff;
+}
+
+.advantages-item:nth-child(3),
+.advantages-item:nth-child(5) {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.advantages-item:nth-child(4) {
+  background-color: rgba(131, 179, 211, 0.2);
 }
