--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,3 +98,251 @@ body {
 .advantages-item:nth-child(4) {
   background-color: rgba(131, 179, 211, 0.2);
 }
+
+.service {
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
+
+.service-lead {
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.service-description {
+  color: rgb(51, 51, 51);
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.service-item {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.service-item:nth-child(2) {
+  background-color: #ffffff;
+}
+
+.service-item h3 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+}
+
+.service-item p {
+  color: rgb(51, 51, 51);
+}
+
+.proposal {
+  text-align: center;
+  color: rgb(51, 51, 51);
+}
+
+.proposal-lead {
+  color: rgb(0, 0, 0);
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.proposal-description {
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.proposal-button {
+  background: rgb(117, 97, 87);
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+  border: none;
+}
+
+.subscribe {
+  background-color: #000;
+  background-image: url(../images/subscribe.png);
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  text-align: center;
+  color: #fff;
+}
+
+.subscribe-lead {
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.subscribe-text {
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.subscribe-button {
+  background: rgb(130, 179, 211);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+  border: none;
+  color: #fff;
+}
+
+.page-footer a {
+  text-decoration: none;
+}
+
+/* CATALOG  */
+
+.catalog-hiro {
+  background-image: url(../images/catalog-hiro.png);
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+}
+
+.inner-header {
+  color: rgb(255, 255, 255);
+  line-height: 23px;
+}
+
+.inner-header-title {
+  font-size: 60px;
+  font-weight: 700;
+  line-height: 78px;
+}
+
+.breadcrumbs {
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.breadcrumbs a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
+.catalog-filter {
+  color: rgb(255, 255, 255);
+  line-height: 23px;
+}
+
+.catalog-filter-title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: capitalize;
+}
+
+.control {
+  line-height: 23px;
+}
+
+.filter-button[type="submit"] {
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  background: rgb(130, 179, 211);
+  border: none;
+}
+
+.filter-button[type="reset"] {
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+}
+
+.filter-result-text {
+  color: rgb(0, 0, 0);
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.control-filter {
+  color: rgb(51, 51, 51);
+  background-color: #fff;
+  border: none;
+}
+
+.hotel-view-button {
+  background-color: #fff;
+  border: none;
+}
+
+.hotel-item-title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+}
+
+.hotel-item span {
+  color: rgb(51, 51, 51);
+}
+
+.hotel-item a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: rgb(117, 97, 87);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: center;
+}
+
+.hotel-item button {
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: rgb(130, 179, 211);
+  border: none;
+}
+
+.hotel-item:nth-child(2) button {
+  background-color: rgb(125, 181, 79);
+}
+
+.hotel-rating {
+  color: rgb(51, 51, 51);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  background: rgb(242, 242, 242);
+}
+
+.pagination-link {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  background-color: rgb(130, 179, 211);
+}
+
+.pagination-current,
+.ellipsis-button {
+  color: #000;
+  background-color: rgb(242, 242, 242);
+}
