--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,7 @@ body {
 .catalog-container {
   width: 1200px;
   margin: 0 auto;
-  outline: 0.5px solid #000;
+  outline: 1px solid #000;
   background-color: #ffffff;
 }
 
@@ -52,7 +52,7 @@ body {
   width: 1060px;
   margin: 0 auto;
   display: flex;
-  outline: 0.5px solid #000;
+  outline: 1px solid #000;
 }
 
 .navigation-logo {
@@ -62,6 +62,7 @@ body {
 
 .navigation {
   display: flex;
+
   width: 100%;
 }
 
@@ -70,30 +71,45 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  gap: 32px;
+  align-items: center;
 }
 
 .navigation-user {
   margin-left: auto;
-  gap: 25px;
 }
 
 .navigation-link {
+  display: block;
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
   text-align: center;
   color: inherit;
   text-decoration: none;
+  margin: 0;
+  padding: 20px 16px 20px 16px;
 }
 
-.navigation-user .nav-button {
-  margin-left: 8px;
+.navigation-link-current {
+  text-decoration-line: underline;
+  text-decoration-thickness: 2px;
+  text-decoration-color: rgb(117, 97, 87);
+  text-underline-offset: 21px;
+}
+
+.navigation-user .navigation-item .navigation-link {
+  padding: 22px 12px 22px 12px;
+}
+
+.navigation-user .navigation-item .nav-button {
+  margin-left: 20px;
   color: #fff;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   background-color: #756157;
+  padding: 8px 50px 8px 50px;
+  border-radius: 4px;
 }
 
 .hero {
@@ -101,7 +117,7 @@ body {
   background-image: url("../images/hero-img.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
-  outline: 2px solid #000;
+  outline: 1px solid #000;
 }
 
 .hiro-logo {
@@ -272,6 +288,8 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   border: none;
+  padding: 8px 50px 8px 50px;
+  border-radius: 4px;
 }
 
 .subscribe {
@@ -281,7 +299,7 @@ body {
   background-size: 100% auto;
   text-align: center;
   color: #fff;
-  outline: 2px solid #000;
+  outline: 1px solid #000;
 }
 
 .subscribe-wrapper {
@@ -331,7 +349,7 @@ body {
   display: flex;
 }
 
-footer {
+.page-footer {
   outline: 2px solid #000;
 }
 
@@ -350,8 +368,12 @@ footer {
   margin-right: 250px;
   padding: 0;
   display: flex;
-  gap: 27px;
   list-style: none;
+}
+
+.footer-social-link {
+  display: block;
+  padding: 12.5px 10px 12.5px 10px;
 }
 
 .phone-number {
@@ -364,7 +386,7 @@ footer {
 }
 
 .footer-social-list img {
-  display: block;
+display: block;
 }
 
 .footer-htmlacademy-link {
@@ -469,6 +491,7 @@ footer {
   text-transform: uppercase;
   background: rgb(130, 179, 211);
   border: none;
+  border-radius: 4px;
 }
 
 .filter-button[type="reset"] {
