--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,12 +35,18 @@ body {
 .catalog-container {
   width: 1200px;
   margin: 0 auto;
-  outline: 1px solid #000;
   background-color: #ffffff;
 }
 
 .visually-hidden {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .main-container {
@@ -52,7 +58,7 @@ body {
   width: 1060px;
   margin: 0 auto;
   display: flex;
-  outline: 1px solid #000;
+  margin-bottom: -9px;
 }
 
 .navigation-logo {
@@ -71,7 +77,6 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  align-items: center;
 }
 
 .navigation-user {
@@ -94,7 +99,7 @@ body {
   text-decoration-line: underline;
   text-decoration-thickness: 2px;
   text-decoration-color: rgb(117, 97, 87);
-  text-underline-offset: 21px;
+  text-underline-offset: 23px;
 }
 
 .navigation-user .navigation-item .navigation-link {
@@ -108,8 +113,14 @@ body {
   line-height: 20px;
   text-transform: uppercase;
   background-color: #756157;
-  padding: 8px 50px 8px 50px;
+  padding: 8px 0 8px 0;
   border-radius: 4px;
+  text-align: center;
+  min-width: 160px;
+}
+
+.navigation-user .navigation-item:nth-child(3) {
+  padding-top: 14px;
 }
 
 .hero {
@@ -117,7 +128,9 @@ body {
   background-image: url("../images/hero-img.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
-  outline: 1px solid #000;
+  padding-top: 51px;
+  padding-bottom: 80px;
+  margin-bottom: 67px;
 }
 
 .hiro-logo {
@@ -126,7 +139,7 @@ body {
 
 .advantages {
   text-align: center;
-  outline: 2px solid #000;
+  margin-bottom: 64px;
 }
 
 .advantages-lead {
@@ -136,6 +149,7 @@ body {
   text-transform: uppercase;
   width: 630px;
   margin: 0 auto;
+  margin-bottom: 24px;
 }
 
 .advantages-description {
@@ -143,6 +157,7 @@ body {
   font-size: 22px;
   line-height: 26px;
   margin: 0 auto;
+  margin-bottom: 90px;
 }
 
 .advantages-list {
@@ -155,6 +170,7 @@ body {
 
 .advantages-item-info {
   width: 400px;
+  box-sizing: border-box;
 }
 
 .advantages-item .advantages-item-img {
@@ -166,6 +182,10 @@ body {
   font-weight: 700;
   line-height: 28px;
   text-transform: uppercase;
+  margin: 0 auto;
+  padding: 0;
+  min-width: 175px;
+  text-align: center;
 }
 
 .advantages-item-text {
@@ -176,6 +196,7 @@ body {
 .advantages-item:nth-child(7) {
   color: #ffffff;
   background-color: #82b3d3;
+  padding: 102px 0;
 }
 
 .advantages-item:nth-child(1) p,
@@ -185,32 +206,55 @@ body {
 
 .advantages-item:nth-child(3),
 .advantages-item:nth-child(5) {
+  padding: 113px 0;
   background-color: rgba(131, 179, 211, 0.12);
 }
 
 .advantages-item:nth-child(4) {
+  padding: 113px 0;
   background-color: rgba(131, 179, 211, 0.2);
 }
 
 .advantages-item-wrap {
   width: 230px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 30px;
+}
+
+.advantages-item-wrap span {
+  width: 60px;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.advantages-item:nth-child(3) span,
+.advantages-item:nth-child(4) span,
+.advantages-item:nth-child(5) span {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .advantages-subtitle {
   width: 175px;
   text-align: center;
-  margin: 0 auto;
+  margin: 0;
 }
 
+.advantages-item-text {
+  margin: 0;
+}
 .service {
   text-align: center;
   color: rgb(0, 0, 0);
+  margin-bottom: 96px;
 }
 
 .service-lead {
   width: 505px;
   margin: 0 auto;
+  margin-bottom: 20px;
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
@@ -223,6 +267,7 @@ body {
   line-height: 26px;
   width: 490px;
   margin: 0 auto;
+  margin-bottom: 64px;
 }
 
 .service-list {
@@ -233,7 +278,14 @@ body {
 }
 
 .service-item {
+  width: 400px;
   background-color: rgba(131, 179, 211, 0.12);
+  padding: 80px 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 30px;
 }
 
 .service-item:nth-child(2) {
@@ -245,7 +297,7 @@ body {
   font-weight: 700;
   line-height: 28px;
   text-transform: uppercase;
-  width: 400px;
+  margin: 0;
 }
 
 .service-item p {
@@ -257,6 +309,7 @@ body {
 .proposal {
   text-align: center;
   color: rgb(51, 51, 51);
+  margin-bottom: 96px;
 }
 
 .proposal-wrapper {
@@ -272,20 +325,23 @@ body {
   text-align: center;
   text-transform: uppercase;
   margin: 0;
+  margin-bottom: 20px;
 }
 
 .proposal-description {
   font-size: 22px;
   line-height: 26px;
   margin: 0;
+  margin-bottom: 54px;
 }
 
 .proposal-button {
-  background: rgb(117, 97, 87);
+  background-color: rgb(117, 97, 87);
   color: rgb(255, 255, 255);
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
+  letter-spacing: -1.7px;
   text-transform: uppercase;
   border: none;
   padding: 8px 50px 8px 50px;
@@ -299,12 +355,15 @@ body {
   background-size: 100% auto;
   text-align: center;
   color: #fff;
-  outline: 1px solid #000;
+  padding: 96px 258px 104px 258px;
 }
 
 .subscribe-wrapper {
   width: 684px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .subscribe-lead {
@@ -312,11 +371,16 @@ body {
   font-weight: 700;
   line-height: 36px;
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .subscribe-text {
   font-size: 22px;
   line-height: 26px;
+  width: 475px;
+  margin: 0;
+  margin-bottom: 54px;
 }
 
 .subscribe-button {
@@ -325,11 +389,11 @@ body {
   font-weight: 700;
   line-height: 36px;
   text-transform: uppercase;
+  letter-spacing: -2.1px;
   border: none;
   color: #fff;
   margin: 0;
-  padding: 0;
-  width: 232px;
+  padding: 8px 50px 8px 50px;
   border-radius: 0 4px 4px 0;
 }
 
@@ -355,6 +419,8 @@ body {
 
 .page-footer a {
   text-decoration: none;
+  margin-top: 47px;
+  margin-bottom: 30px;
 }
 
 .page-footer-wrapper {
@@ -365,15 +431,17 @@ body {
 
 .footer-social-list {
   margin: 0;
-  margin-right: 250px;
+  margin-right: 235.5px;
   padding: 0;
   display: flex;
+  align-items: center;
+  flex-wrap: wrap;
   list-style: none;
 }
 
 .footer-social-link {
   display: block;
-  padding: 12.5px 10px 12.5px 10px;
+  padding: 0 13px 0 13px;
 }
 
 .phone-number {
@@ -386,7 +454,7 @@ body {
 }
 
 .footer-social-list img {
-display: block;
+  display: block;
 }
 
 .footer-htmlacademy-link {
@@ -492,6 +560,7 @@ display: block;
   background: rgb(130, 179, 211);
   border: none;
   border-radius: 4px;
+  padding: 8px 50px 8px 50px;
 }
 
 .filter-button[type="reset"] {
@@ -596,7 +665,7 @@ display: block;
   text-align: center;
 }
 
-.hotel-item button {
+.button {
   color: rgb(255, 255, 255);
   font-size: 16px;
   font-weight: 700;
@@ -605,9 +674,15 @@ display: block;
   text-transform: uppercase;
   background-color: rgb(130, 179, 211);
   border: none;
+  padding: 8px 26px;
+  border-radius: 4px;
 }
 
-.hotel-item:nth-child(2) button {
+.hotel-button {
+  padding: 8px 18px;
+}
+
+.hotel-chosed {
   background-color: rgb(125, 181, 79);
 }
 
@@ -627,14 +702,6 @@ display: block;
   border-radius: 4px;
   padding: 8px 22px;
   margin: 0;
-}
-
-.hotel-item-wrapper .button {
-  width: 140px;
-  text-align: center;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  border-radius: 4px;
 }
 
 .straight-line {
@@ -659,7 +726,7 @@ display: block;
   text-align: center;
   background-color: rgb(130, 179, 211);
   display: block;
-  width: 60px;
+  min-width: 60px;
   padding-top: 12px;
   padding-bottom: 12px;
   border-radius: 4px;
