--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,17 +58,16 @@ body {
   width: 1060px;
   margin: 0 auto;
   display: flex;
-  margin-bottom: -9px;
 }
 
 .navigation-logo {
   display: block;
   margin-right: 28px;
+  margin-bottom: -6px;
 }
 
 .navigation {
   display: flex;
-
   width: 100%;
 }
 
@@ -77,6 +76,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  align-items: center;
 }
 
 .navigation-user {
@@ -117,10 +117,6 @@ body {
   border-radius: 4px;
   text-align: center;
   min-width: 160px;
-}
-
-.navigation-user .navigation-item:nth-child(3) {
-  padding-top: 14px;
 }
 
 .hero {
@@ -336,12 +332,12 @@ body {
 }
 
 .proposal-button {
+  font-family: "PT Sans", sans-serif;
   background-color: rgb(117, 97, 87);
   color: rgb(255, 255, 255);
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
-  letter-spacing: -1.7px;
   text-transform: uppercase;
   border: none;
   padding: 8px 50px 8px 50px;
@@ -384,12 +380,12 @@ body {
 }
 
 .subscribe-button {
+  font-family: "PT Sans", sans-serif;
   background-color: rgb(130, 179, 211);
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
   text-transform: uppercase;
-  letter-spacing: -2.1px;
   border: none;
   color: #fff;
   margin: 0;
@@ -565,13 +561,13 @@ body {
 }
 
 .filter-button[type="submit"] {
+  font-family: "PT Sans", sans-serif;
   color: rgb(255, 255, 255);
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
   text-align: center;
   letter-spacing: -1.3px;
-  text-transform: uppercase;
   background: rgb(130, 179, 211);
   border: none;
   border-radius: 4px;
@@ -579,11 +575,11 @@ body {
 }
 
 .filter-button[type="reset"] {
+  font-family: "PT Sans", sans-serif;
   color: rgb(255, 255, 255);
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
-  letter-spacing: -1.3px;
   text-align: center;
   text-transform: uppercase;
   background-color: transparent;
