--- a/styles/styles.css
+++ b/styles/styles.css
@@ -409,34 +409,39 @@ body {
   display: flex;
 }
 
-.page-footer a {
-  text-decoration: none;
-  margin-top: 47px;
-  margin-bottom: 30px;
+.page-footer {
+  margin: 40px auto 30px auto;
+  width: 1060px;
 }
 
 .page-footer-wrapper {
-  width: 1060px;
-  margin: 0 auto;
   display: flex;
+  min-height: 50px;
+  align-items: center;
 }
 
 .footer-social-list {
-  margin: 0;
-  margin-right: 230px;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+  width: 142px;
+  text-decoration: none;
   list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: 236px;
 }
 
-.footer-social-link {
-  display: block;
-  padding: 0 13px 0 13px;
+.footer-social-item .footer-social-link {
+  display: flex;
+  min-width: 47px;
+  min-height: 40px;
+  justify-content: center;
+  align-items: center;
 }
 
 .phone-number {
+  text-decoration: none;
+  margin: 0;
   font-size: 40px;
   font-weight: 400;
   line-height: 40px;
@@ -445,13 +450,13 @@ body {
   color: inherit;
 }
 
-.footer-social-list img {
-  display: block;
-}
-
 .footer-htmlacademy-link {
   display: block;
   margin-left: auto;
+}
+
+.footer-htmlacademy-link img {
+  display: block;
 }
 
 /* CATALOG  */
@@ -567,8 +572,8 @@ body {
   font-weight: 700;
   line-height: 20px;
   text-align: center;
-  letter-spacing: -1.3px;
-  background: rgb(130, 179, 211);
+  text-transform: uppercase;
+  background-color: rgb(130, 179, 211);
   border: none;
   border-radius: 4px;
   padding: 8px 50px 8px 50px;
@@ -657,25 +662,67 @@ body {
 }
 
 .hotel-item {
-  width: 300px;
-  padding: 19px 19px;
+  display: grid;
+  grid-template-columns: 19px 150px 150px 19px;
+  grid-template-rows: 19px 212px min-content min-content min-content min-content 19px;
   border: 1px solid rgb(230, 230, 230);
   border-radius: 4px;
 }
 
-.hotel-item-wrapper {
-  display: flex;
-  justify-content: space-between;
+.hotel-item-img {
+  grid-column: 2/4;
+  grid-row: 2/3;
   margin-bottom: 16px;
+}
+
+.hotel-item .hotel-item-title {
+  grid-column: 2/4;
+  grid-row: 3/4;
+  margin-top: 16px;
+}
+
+.hotel-item > span {
+  grid-column: 2/3;
+  grid-row: 4/5;
+  margin-bottom: 16px;
+  justify-self: left;
+}
+
+.hotel-item .hotel-item-price {
+  grid-column: 3/4;
+  grid-row: 4/5;
+  justify-self: right;
+}
+
+.hotel-item .hotel-button-link {
+  grid-column: 2/3;
+  grid-row: 5/6;
+  justify-self: left;
+  margin-bottom: 16px;
+}
+
+.hotel-item .hotel-button {
+  grid-column: 3/4;
+  grid-row: 5/6;
+  justify-self: right;
+  margin-bottom: 16px;
+}
+
+.hotel-item .star-rating {
+  grid-column: 2/3;
+  grid-row: 6/7;
+  justify-self: left;
+  align-self: center;
+}
+
+.hotel-item .hotel-rating {
+  grid-column: 3/4;
+  grid-row: 6/7;
+  justify-self: right;
 }
 
 .hotel-item-wrapper:last-child {
   margin-bottom: 0;
-}
-
-.hotel-item > img {
-  display: block;
-  margin-bottom: 16px;
 }
 
 .hotel-item-title {
@@ -715,12 +762,13 @@ body {
 }
 
 .hotel-button {
-  letter-spacing: -1.3px;
-  padding: 8px 18px;
+  font-family: "PT Sans", sans-serif;
+  padding: 8px 20px;
 }
 
-.hotel-chosed {
+.hotel-item .hotel-chosed {
   background-color: rgb(125, 181, 79);
+  padding: 8px 18px;
 }
 
 .star-rating {
