--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,6 +64,7 @@ body {
   display: block;
   margin-right: 28px;
   margin-bottom: -6px;
+  z-index: 1;
 }
 
 .navigation {
@@ -83,6 +84,42 @@ body {
   margin-left: auto;
 }
 
+.navigation-list.navigation-user
+  .navigation-item:first-child
+  > .navigation-link {
+  background-image: url(../images/header-icons/search.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 32px 22px;
+}
+
+.navigation-list.navigation-user
+  .navigation-item:nth-child(2)
+  > .navigation-link {
+  background-image: url(../images/header-icons/heart.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 32px 22px;
+}
+
+.navigation-list.navigation-user .navigation-item:nth-child(2) {
+  position: relative;
+}
+
+.count-reaction {
+  position: absolute;
+  top: 11px;
+  right: 5px;
+  border-radius: 50%;
+  background-color: rgb(125, 181, 79);
+  padding: 5px;
+  color: #fff;
+  font-size: 10px;
+  line-height: 10px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
 .navigation-link {
   display: block;
   font-size: 20px;
@@ -96,10 +133,10 @@ body {
 }
 
 .navigation-link-current {
-  text-decoration-line: underline;
+  /* text-decoration-line: underline;
   text-decoration-thickness: 2px;
   text-decoration-color: rgb(117, 97, 87);
-  text-underline-offset: 23px;
+  text-underline-offset: 23px; */
 }
 
 .navigation-user .navigation-item .navigation-link {
@@ -127,6 +164,20 @@ body {
   padding-top: 51px;
   padding-bottom: 80px;
   margin-bottom: 67px;
+  position: relative;
+}
+
+.hero::after,
+.hero::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 1200px;
+  height: 60px;
+  background-image: url(../images/hero-step.svg);
+  background-repeat: no-repeat;
 }
 
 .hiro-logo {
@@ -496,12 +547,32 @@ body {
   padding: 0;
   margin-bottom: 40px;
   display: flex;
-  gap: 11px;
+  gap: 28.5px;
 }
 
 .breadcrumbs a {
   text-decoration: none;
   color: rgb(255, 255, 255);
+}
+
+.breadcrumb-item {
+  position: relative;
+}
+
+.breadcrumb-item::after {
+  content: "";
+  position: absolute;
+  right: -17.5px;
+  top: 5px;
+  width: 7px;
+  height: 10px;
+  background-image: url(../images/breadcrumb-icons/breadcrumb-icon-2.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.breadcrumb-item:last-child::after {
+  content: none;
 }
 
 .filter-hotels-wrapper {
@@ -649,6 +720,20 @@ body {
   border: 2px solid #e5e5e5;
   border-radius: 4px;
   padding: 14px 12px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.hotel-view-button-grid {
+  background-image: url(../images/button-icons/button-grid-icon.svg);
+}
+
+.hotel-view-button-fullscreen {
+  background-image: url(../images/button-icons/button-fullscreen-icon.svg);
+}
+
+.hotel-view-button-list {
+  background-image: url(../images/button-icons/button-list-icon.svg);
 }
 
 .hotel-list {
