--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,7 @@ body {
   width: 1060px;
   margin: 0 auto;
   display: flex;
+  margin-bottom: -1px;
 }
 
 .navigation-logo {
@@ -130,13 +131,27 @@ body {
   text-decoration: none;
   margin: 0;
   padding: 20px 16px 20px 16px;
+  position: relative;
 }
 
-.navigation-link-current {
-  /* text-decoration-line: underline;
-  text-decoration-thickness: 2px;
-  text-decoration-color: rgb(117, 97, 87);
-  text-underline-offset: 23px; */
+.navigation-link-main:hover::before {
+  content: "";
+  position: absolute;
+  right: 16px;
+  bottom: -1px;
+  left: 16px;
+  height: 3px;
+  background-color: rgb(117, 97, 87);
+}
+
+.navigation-link-current::before {
+  content: "";
+  position: absolute;
+  right: 16px;
+  bottom: -1px;
+  left: 16px;
+  height: 3px;
+  background-color: rgb(117, 97, 87);
 }
 
 .navigation-user .navigation-item .navigation-link {
@@ -156,6 +171,27 @@ body {
   min-width: 160px;
 }
 
+.navigation-link.nav-button:hover,
+.proposal-button:hover {
+  background-color: rgba(97, 80, 72, 1);
+}
+
+.navigation-link.nav-button:focus,
+.proposal-button:focus {
+  background-color: rgba(97, 80, 72, 1);
+}
+
+.navigation-link.nav-button:active,
+.proposal-button:active {
+  background-color: rgba(117, 97, 87, 1);
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.navigation-link.nav-button:disabled,
+.proposal-button:disabled {
+  background-color: rgba(229, 229, 229, 1);
+}
+
 .hero {
   text-align: center;
   background-image: url("../images/hero-img.jpg");
@@ -172,9 +208,9 @@ body {
   content: "";
   display: block;
   position: absolute;
-  bottom: -1px;
+  bottom: -1.2px;
   left: 0;
-  width: 1200px;
+  width: 100%;
   height: 60px;
   background-image: url(../images/hero-step.svg);
   background-repeat: no-repeat;
@@ -444,6 +480,20 @@ body {
   border-radius: 0 4px 4px 0;
 }
 
+.subscribe-button:hover {
+  background-color: #68a2ca;
+}
+.subscribe-button:focus {
+  background-color: #68a2ca;
+}
+.subscribe-button:active {
+  background-color: #82b3d3;
+  color: rgba(255, 255, 255, 0.3);
+}
+.subscribe-button:disabled {
+  background-color: rgba(229, 229, 229, 1);
+}
+
 .subscribe-wrapper input {
   margin: 0;
   border: 0;
@@ -490,6 +540,16 @@ body {
   align-items: center;
 }
 
+.footer-social-link:hover svg path {
+  fill: rgba(104, 162, 202, 1);
+}
+.footer-social-link:focus svg path {
+  fill: rgba(104, 162, 202, 1);
+}
+.footer-social-link:active svg path {
+  fill: rgba(104, 162, 202, 0.3);
+}
+
 .phone-number {
   text-decoration: none;
   margin: 0;
@@ -501,14 +561,34 @@ body {
   color: inherit;
 }
 
+.phone-number:hover {
+  color: rgba(117, 97, 87, 1);
+}
+.phone-number:focus {
+  color: rgba(117, 97, 87, 1);
+}
+.phone-number:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
 .footer-htmlacademy-link {
   display: block;
   margin-left: auto;
 }
 
-.footer-htmlacademy-link img {
-  display: block;
+.footer-htmlacademy-link:hover svg path {
+  fill: rgba(117, 97, 87, 1);
 }
+.footer-htmlacademy-link:focus svg path {
+  fill: rgba(117, 97, 87, 1);
+}
+.footer-htmlacademy-link:active svg path {
+  fill: rgba(117, 97, 87, 0.3);
+}
+
+/* .footer-htmlacademy-link img {
+  display: block;
+} */
 
 /* CATALOG  */
 
@@ -573,6 +653,26 @@ body {
 
 .breadcrumb-item:last-child::after {
   content: none;
+}
+
+.breadcrumb-link:hover svg path {
+  fill: rgba(117, 97, 87, 1);
+}
+.breadcrumb-link:focus svg path {
+  fill: rgba(117, 97, 87, 1);
+}
+.breadcrumb-link:active svg path {
+  fill: rgba(117, 97, 87, 0.3);
+}
+
+.breadcrumb-link:hover {
+  color:rgba(117, 97, 87, 1);
+}
+.breadcrumb-link:focus {
+  color:rgba(117, 97, 87, 1);
+}
+.breadcrumb-link:active {
+  color: rgba(117, 97, 87, 0.3);
 }
 
 .filter-hotels-wrapper {
@@ -650,6 +750,17 @@ body {
   padding: 8px 50px 8px 50px;
 }
 
+.filter-button[type="submit"]:hover {
+  background-color: rgba(104, 162, 202, 1);
+}
+.filter-button[type="submit"]:focus {
+  background-color: rgba(104, 162, 202, 1);
+}
+.filter-button[type="submit"]:active {
+  background-color: rgba(104, 162, 202, 1);
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .filter-button[type="reset"] {
   font-family: "PT Sans", sans-serif;
   color: rgb(255, 255, 255);
@@ -660,6 +771,19 @@ body {
   text-transform: uppercase;
   background-color: transparent;
   border: none;
+}
+
+.filter-button[type="reset"]:hover {
+  color: rgba(255, 255, 255, 0.3);
+}
+.filter-button[type="reset"]:focus {
+  color: rgba(255, 255, 255, 1);
+}
+.filter-button[type="reset"]:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+.filter-button[type="reset"]:disabled {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .catalog-hotels {
@@ -696,6 +820,20 @@ body {
   margin-right: 70px;
 }
 
+.control-filter:hover {
+  border-color: rgba(104, 162, 202, 1);''
+}
+.control-filter:focus {
+  border-color: rgba(104, 162, 202, 1);
+}
+.control-filter:active {
+  border-color: rgba(63, 94, 114, 1);
+}
+.control-filter:disabled {
+  border-color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
+}
+
 .control-filter option {
   font-size: 18px;
 }
@@ -722,6 +860,22 @@ body {
   padding: 14px 12px;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.hotel-view-button.active {
+  border: 2px solid black;
+}
+
+.hotel-view-button:hover {
+  border: 2px solid black;
+}
+
+.hotel-view-button:focus {
+  border-color: rgba(104, 162, 202, 1);
+}
+
+.hotel-view-button:active {
+  border: 2px solid black;
 }
 
 .hotel-view-button-grid {
@@ -851,6 +1005,8 @@ body {
   padding: 8px 20px;
 }
 
+
+
 .hotel-item .hotel-chosed {
   background-color: rgb(125, 181, 79);
   padding: 8px 18px;
@@ -861,6 +1017,54 @@ body {
   align-items: center;
   gap: 6px;
 }
+
+.hotel-button-link:hover{
+  background-color:rgba(97, 80, 72, 1)
+}
+.hotel-button-link:focus{
+  background-color: rgba(97, 80, 72, 1);
+}
+.hotel-button-link:active{
+background-color:rgba(117, 97, 87, 1);
+color: rgba(255, 255, 255, 0.3);
+}
+.hotel-button-link:disabled{
+  background-color: rgba(229, 229, 229, 1);
+  color:
+  rgba(255, 255, 255, 1);
+}
+
+
+.hotel-item:not(:nth-child(2)) .hotel-button:hover{
+  background-color: rgba(104, 162, 202, 1);
+}
+.hotel-item:not(:nth-child(2)) .hotel-button:focus{
+  background-color: rgba(104, 162, 202, 1);
+}
+.hotel-item:not(:nth-child(2)) .hotel-button:active{
+background-color:rgba(130, 179, 211, 1);
+color: rgba(255, 255, 255, 0.3);
+}
+.hotel-item:not(:nth-child(2)) .hotel-button:disabled{
+  background-color: rgba(229, 229, 229, 1);
+  color:rgba(255, 255, 255, 1);
+}
+
+.hotel-chosed:hover{
+  background-color:rgba(108, 158, 66, 1);
+}
+.hotel-chosed:focus{
+  background-color:rgba(108, 158, 66, 1);
+}
+.hotel-chosed:active{
+background-color:rgba(125, 181, 79, 1);
+color: rgba(255, 255, 255, 0.3);
+}
+.hotel-chosed:disabled{
+  background-color: rgba(229, 229, 229, 1);
+  color:rgba(255, 255, 255, 1);
+}
+
 
 .hotel-rating {
   color: rgb(51, 51, 51);
@@ -903,6 +1107,18 @@ body {
   padding-bottom: 12px;
   border-radius: 4px;
 }
+
+.pagination-link:not(.pagination-current):not(.ellipsis-button):hover{
+  background-color:rgba(104, 162, 202, 1);
+}
+.pagination-link:not(.pagination-current):not(.ellipsis-button):focus{
+  background-color:rgba(104, 162, 202, 1);
+}
+.pagination-link:not(.pagination-current):not(.ellipsis-button):active{
+  background-color:rgba(130, 179, 211, 1);
+  color: rgba(255, 255, 255, 0.3);
+}
+
 
 .pagination-current,
 .ellipsis-button {
