--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   background-color: #ffffff;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
 }
 
 .visually-hidden {
@@ -505,11 +506,13 @@ body {
 }
 
 .subscribe-wrapper input {
+  font-family: "PT Sans", sans-serif;
   margin: 0;
   border: 0;
-  width: 432px;
+  /* width: 432px; */
+  flex-grow: 1;
   border-radius: 4px 0 0 4px;
-  padding: 14px 0 14px 20px;
+  padding: 15px 0 14px 20px;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
@@ -518,6 +521,7 @@ body {
 
 .subscribe-form {
   display: flex;
+  width: 100%;
 }
 
 .page-footer {
@@ -717,14 +721,16 @@ body {
 }
 
 .catalog-filter-right-side {
-  margin-top: auto;
+  display: flex;
+  gap: 70px;
   margin-bottom: 5px;
 }
 
-.catalog-filter-right-side div {
+.catalog-filter-right-side .filter-button-side {
   display: flex;
   flex-direction: column;
   gap: 40px;
+  margin-top: auto;
 }
 
 .catalog-filter-group {
@@ -732,6 +738,113 @@ body {
   padding: 0;
   border: none;
   width: 151px;
+}
+
+.catalog-filter-group-r {
+  margin: 0;
+  padding: 0;
+  border: none;
+  width: 287px;
+}
+
+.catalog-filter-group-r .catalog-filter-title {
+  margin-bottom: 30px;
+}
+
+.catalog-filter-right-side .range-wrapper-inputs {
+  display: flex;
+  direction: row;
+  gap: 2px;
+  margin-bottom: 44px;
+}
+
+.catalog-filter-label {
+  position: relative;
+}
+
+.wrapper-input {
+  position: relative;
+}
+
+.wrapper-input span {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  color: rgba(0, 0, 0, 0.5);
+  ;
+}
+
+.wrapper-input:first-child .range-input{
+  border-radius: 4px 0 0 4px;
+}
+
+.wrapper-input:nth-child(2) .range-input{
+  border-radius: 0 4px 4px 0;
+}
+.range-input {
+  position: relative;
+  width: 143px;
+  padding: 12px 20px 12px;
+  line-height: 24px;
+  box-sizing: border-box;
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 18px;
+  margin: 0;
+  border: none;
+  appearance: textfield;
+}
+
+
+.range-input::-webkit-outer-spin-button,
+.range-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.range-input::-moz-range-thumb {
+  display: none;
+}
+
+.range-input:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.range-input:focus {
+  box-sizing: border-box;
+  padding: 11px 20px 11px;
+  border: 1px solid  rgba(104, 162, 202, 1);
+  outline: none;
+}
+
+.range-scale {
+  position: relative;
+  height: 4px;
+  background-color:rgb(63, 94, 114);
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: rgba(242, 242, 242, 1);
+}
+
+.range-togle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: rgba(242, 242, 242, 1);
+  border: none;
+  border-radius: 5px;
+}
+
+.toggle-min {
+  top: -8px
+}
+
+.toggle-max {
+  top: -8px;
+  right: -20px;
 }
 
 .catalog-filter-title {
@@ -753,11 +866,66 @@ body {
 }
 
 .control {
+  position: relative;
+  display: block;
   line-height: 23px;
+  padding-left: 36px;
 }
 
-.control-input {
-  margin-right: 19px;
+.control-mark {
+  position: absolute;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background-color: white;
+
+}
+
+.control:hover .control-mark  {
+  background-color:rgba(255, 255, 255, 0.8);
+
+  cursor: pointer;
+}
+
+.control:hover .control-label {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+
+.control:disabled .control-mark {
+  background-color:rgba(255, 255, 255, 0.3);
+
+  cursor: pointer;
+}
+
+
+.control-input[type="checkbox"]:checked + .control-mark::after {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-image: url(../images/checkbox.png);
+  background-repeat:no-repeat;
+  background-position: center;
+}
+
+.control-input[type="radio"] + .control-mark {
+border-radius:50%;
+}
+
+.control-input[type="radio"]:checked + .control-mark::after {
+  position: absolute;
+  top:26%;
+  left: 24%;
+  content: "";
+  width: 10px;
+  height: 10px;
+ background-color:rgb(63, 94, 114);
+ border-radius:50%;
 }
 
 .filter-button[type="submit"] {
@@ -831,21 +999,32 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   margin: 0;
-  margin-right: 200px;
+}
+
+.select {
+  display: flex;
+  width: 292px;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 70px;
 }
 
 .control-filter {
-  min-width: 292px;
-  height: 49px;
-  color: rgb(51, 51, 51);
-  background-color: #fff;
+  width: 100%;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 21px;
+  color:#333333;
+  appearance: none;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
-  width: 252px;
-  padding: 14px 20px 14px 20px;
-  margin-right: 70px;
-  transition: all 0.5s ease-in-out;
+  padding: 12px 20px;
+  background-image: url(../images/Vector-selector.svg);
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  padding-right: 40px;
 }
+
 
 .control-filter:hover {
   border-color: rgba(104, 162, 202, 1);''
