--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,6 +80,7 @@ body {
   padding: 0;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .navigation-user {
@@ -615,7 +616,7 @@ body {
   background-color: #000;
   background-image: url("../images/catalog-hiro.png");
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-size: 100% 100%;
   padding: 35px 70px 70px 70px;
   margin-bottom: 52px;
 }
@@ -866,6 +867,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  max-width: 151px;
 }
 
 .control {
@@ -873,6 +875,10 @@ body {
   display: block;
   line-height: 23px;
   padding-left: 36px;
+}
+
+.control-label {
+  word-break: break-word;
 }
 
 .control-mark {
